封装了数据库配置，添加了redis连接和email验证码发送，添加了用户注册功能
